to-do list layout and notes design

--- a/app/src/main/res/layout/activity_note_editor.xml
+++ b/app/src/main/res/layout/activity_note_editor.xml
@@ -16,8 +16,13 @@
 
     <EditText
         android:id="@+id/editText"
-        android:layout_width="408dp"
-        android:layout_height="554dp"
+        android:layout_width="0dp"
+        android:layout_height="656dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:background="@drawable/notes_cell"
+        android:backgroundTint="#FFFFFF"
+        android:elevation="5dp"
         android:ems="10"
         android:fontFamily="@font/roboto"
         android:gravity="start|top"
@@ -26,6 +31,8 @@
         android:textColor="@android:color/black"
         android:textSize="20sp"
         android:textStyle="bold"
+        android:hint="Add your notes..."
+        android:drawableBottom="@drawable/ic_pencil"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.333"
