--- a/app/src/main/res/layout/activity_to_do_list.xml
+++ b/app/src/main/res/layout/activity_to_do_list.xml
@@ -18,12 +18,13 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="144dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="130dp"
+        android:layout_marginTop="10dp"
         android:fontFamily="@font/oswald"
-        android:text="To Do List"
+        android:text="To-Do List"
         android:textColor="#6f5642"
         android:textSize="34sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -74,9 +75,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="176dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="16dp"
         android:clickable="true"
-        app:backgroundTint="#8E8B8B"
+        app:backgroundTint="#cc6b49"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toDoListFrameLayout"
         app:srcCompat="@drawable/ic_addbutton" />
