--- a/app/src/main/res/drawable/notes_cell.xml
+++ b/app/src/main/res/drawable/notes_cell.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <stroke android:width="0dp"/>
-    <solid android:color="#ece6c2"/>
+    <solid android:color="#f4f1e2"/>
     <corners android:radius="30dp" />
     <padding android:bottom="10dp"
         android:right="10dp"
