--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -293,7 +293,7 @@
                     app:srcCompat="@drawable/ic_profile" />
 
                 <TextView
-                    android:id="@+id/textView12"
+                    android:id="@+id/ifLoginMessage"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/profileButton"
