--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -41,10 +41,10 @@
             android:fontFamily="@font/oswald"
             android:text="FEB 2021"
             android:textAlignment="center"
+            android:textAllCaps="true"
             android:textColor="#6f5642"
             android:textSize="34sp"
-            android:textStyle="bold"
-            android:textAllCaps="true" />
+            android:textStyle="bold" />
 
         <Button
             android:layout_width="0dp"
