--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -7,23 +7,77 @@
     tools:context=".Settings">
 
     <RelativeLayout
+        android:id="@+id/relativeLayout4"
         android:layout_width="379dp"
         android:layout_height="67dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="5dp"
         android:layout_marginEnd="16dp"
-        android:background="#D1D1D1"
+        android:background="#F4F4F4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView8">
+        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2">
 
         <ImageView
-            android:id="@+id/imageView7"
+            android:id="@+id/imageView6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ic_informationicon_foreground" />
+
+        <TextView
+            android:id="@+id/textView29"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="90dp"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/roboto"
+            android:text="About "
+            android:textSize="24sp" />
+
+        <ImageView
+            android:id="@+id/aboutView"
             android:layout_width="39dp"
             android:layout_height="37dp"
             android:layout_marginStart="320dp"
             android:layout_marginTop="15dp"
             app:srcCompat="@drawable/ic_arrowright" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/relativeLayout2"
+        android:layout_width="379dp"
+        android:layout_height="67dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="52dp"
+        android:layout_marginEnd="16dp"
+        android:background="#F4F4F4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView8">
+
+        <ImageView
+            android:id="@+id/notificationView"
+            android:layout_width="39dp"
+            android:layout_height="37dp"
+            android:layout_marginStart="320dp"
+            android:layout_marginTop="15dp"
+            app:srcCompat="@drawable/ic_arrowright" />
+
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ic_notificationbell_foreground" />
+
+        <TextView
+            android:id="@+id/textView27"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="90dp"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/roboto"
+            android:text="Notification"
+            android:textSize="24sp" />
     </RelativeLayout>
 
     <ImageView
