--- a/app/src/main/res/layout/to_do_list_recycler.xml
+++ b/app/src/main/res/layout/to_do_list_recycler.xml
@@ -8,7 +8,7 @@
     <RelativeLayout
         android:id="@+id/taskSection"
         android:layout_width="match_parent"
-        android:layout_height="130dp"
+        android:layout_height="match_parent"
         android:padding="10dp">
 
         <Button
@@ -19,7 +19,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginRight="50dp"
             android:background="@drawable/btn_bg"
-            android:backgroundTint="#f4f1e2"
+            android:backgroundTint="#F1EFE9"
             android:elevation="5dp"
             android:fontFamily="@font/roboto"
             android:stateListAnimator="@null"
