--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -12,6 +12,7 @@
         android:layout_height="65dp"
         android:layout_marginStart="45dp"
         android:layout_marginTop="35dp"
+        android:layout_marginEnd="45dp"
         android:background="@drawable/btn_circle"
         android:backgroundTint="#CC6B49"
         android:fontFamily="@font/roboto"
@@ -19,6 +20,7 @@
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         app:cornerRadius="70dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editMessageInput" />
 
@@ -28,6 +30,7 @@
         android:layout_height="151dp"
         android:layout_marginStart="45dp"
         android:layout_marginTop="23dp"
+        android:layout_marginEnd="45dp"
         android:background="@drawable/custom_input"
         android:drawablePadding="12dp"
         android:ems="10"
@@ -36,6 +39,7 @@
         android:inputType="textPersonName"
         android:paddingLeft="8dp"
         android:textColor="#000000"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editMessageUsername" />
 
@@ -45,14 +49,16 @@
         android:layout_height="53dp"
         android:layout_marginStart="45dp"
         android:layout_marginTop="68dp"
+        android:layout_marginEnd="45dp"
         android:background="@drawable/custom_input"
         android:drawablePadding="12dp"
         android:ems="10"
         android:fontFamily="@font/roboto"
-        android:hint="Username"
+        android:hint="Email"
         android:inputType="textPersonName"
         android:paddingLeft="8dp"
         android:textColor="#000000"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
