--- a/app/src/main/res/layout/activity_faq.xml
+++ b/app/src/main/res/layout/activity_faq.xml
@@ -37,9 +37,11 @@
         android:id="@+id/spinner"
         android:layout_width="328dp"
         android:layout_height="49dp"
+        android:layout_marginStart="41dp"
+        android:layout_marginTop="38dp"
         android:background="#FFFFFF"
-        tools:layout_editor_absoluteX="41dp"
-        tools:layout_editor_absoluteY="206dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
     <ImageView
         android:id="@+id/backHome"
