--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -43,6 +43,7 @@
         android:layout_marginEnd="44dp"
         android:fontFamily="@font/roboto"
         android:text="Change"
+        android:textColor="#128AE6"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />
@@ -55,6 +56,7 @@
         android:layout_marginEnd="44dp"
         android:fontFamily="@font/roboto"
         android:text="Change "
+        android:textColor="#128AE6"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView10" />
@@ -67,6 +69,7 @@
         android:layout_marginEnd="44dp"
         android:fontFamily="@font/roboto"
         android:text="Add "
+        android:textColor="#128AE6"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView16" />
@@ -125,13 +128,28 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
+    <TextView
         android:id="@+id/logoutButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="152dp"
-        android:layout_marginTop="85dp"
-        android:text="LogOut"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="15dp"
+        android:shadowColor="#2A6CA1"
+        android:text="Log out account"
+        android:textColor="#128AE6"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/deleteAccountButton" />
+
+    <TextView
+        android:id="@+id/deleteAccountButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="45dp"
+        android:text="Delete Account"
+        android:textColor="#D12B2B"
+        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView19" />
 
