--- a/app/src/main/res/layout/activity_to_dolist_edit_task_details.xml
+++ b/app/src/main/res/layout/activity_to_dolist_edit_task_details.xml
@@ -7,6 +7,18 @@
     tools:context=".ToDOListEditTaskDetails">
 
     <TextView
+        android:id="@+id/deleteTaskButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="26dp"
+        android:layout_marginEnd="16dp"
+        android:text="Delete Task"
+        android:textColor="#D12B2B"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -35,7 +47,7 @@
         android:layout_width="200dp"
         android:layout_height="55dp"
         android:layout_marginStart="104dp"
-        android:layout_marginTop="72dp"
+        android:layout_marginTop="100dp"
         android:background="@drawable/btn_circle"
         android:backgroundTint="#CC6B49"
         android:drawableEnd="@drawable/ic_addbutton"
