Updated Note Page

--- a/app/src/main/res/layout/activity_to_do_list.xml
+++ b/app/src/main/res/layout/activity_to_do_list.xml
@@ -36,12 +36,14 @@
         android:layout_height="50dp"
         android:layout_marginStart="1dp"
         android:layout_marginTop="88dp"
+        android:layout_marginEnd="1dp"
         android:background="#F1F1F1"
         android:fontFamily="@font/roboto"
         android:stateListAnimator="@null"
         android:text="Work"
         android:textSize="16sp"
         android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@+id/personalFragmentButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -49,14 +51,16 @@
         android:id="@+id/personalFragmentButton"
         android:layout_width="205dp"
         android:layout_height="50dp"
-        android:layout_marginStart="2dp"
+        android:layout_marginStart="1dp"
         android:layout_marginTop="88dp"
+        android:layout_marginEnd="1dp"
         android:background="#DFDFDF"
         android:fontFamily="@font/roboto"
         android:stateListAnimator="@null"
         android:text="Personal"
         android:textSize="16sp"
         android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/workFragmentButton"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -80,8 +84,12 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="176dp"
         android:layout_marginTop="5dp"
+        android:layout_marginEnd="176dp"
+        android:layout_marginBottom="18dp"
         android:clickable="true"
         app:backgroundTint="#cc6b49"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toDoListFrameLayout"
         app:srcCompat="@drawable/ic_addbutton" />
