--- a/app/src/main/res/layout/activity_notes.xml
+++ b/app/src/main/res/layout/activity_notes.xml
@@ -6,14 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".Notes">
 
-    <ImageView
-        android:id="@+id/backHome"
-        android:layout_width="65dp"
-        android:layout_height="65dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_back" />
-
     <ListView
         android:id="@+id/listView"
         android:layout_width="345dp"
@@ -31,6 +23,14 @@
 
     </ListView>
 
+    <ImageView
+        android:id="@+id/backHome"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_back" />
+
     <TextView
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
@@ -46,5 +46,21 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/addNotesButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="44dp"
+        android:backgroundTint="#cc6b49"
+        android:clickable="true"
+        android:tint="#FFFFFF"
+        app:backgroundTint="#cc6b49"
+        app:borderWidth="0.75dp"
+        app:elevation="2dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/ic_notes" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
