--- a/app/src/main/res/layout/to_do_list_recycler.xml
+++ b/app/src/main/res/layout/to_do_list_recycler.xml
@@ -37,5 +37,14 @@
             android:elevation="6dp"
             app:srcCompat="@drawable/ic_playarrow_foreground" />
 
+        <TextView
+            android:id="@+id/taskDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="60dp"
+            android:layout_marginTop="69dp"
+            android:text="TextView"
+            android:textStyle="italic" />
+
     </RelativeLayout>
 </LinearLayout>
